@@ -1,3 +1,8 @@
+2006-08-27  Michael Olson  <mwolson@gnu.org>
+
+	* processes.texi (Transaction Queues): Remove stray quote
+	character.
+
 2006-08-25  Richard Stallman  <rms@gnu.org>
 
 	* os.texi (Idle Timers): run-with-idle-timer allows Lisp time value.
